# agent86CLI

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-tui-skeleton-live-status-line/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-command-palette-menus/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/quick/260720-1jw-fix-tui-models-rendering-bug-wrap-tables/: 260720-1jw-PLAN.md  260720-1jw-SUMMARY.md
.planning/quick/260720-1rs-fix-tui-shift-tab-not-cycling-approval-m/: 260720-1rs-PLAN.md  260720-1rs-SUMMARY.md
docs/: ARCHITECTURE.md  BACKLOG.md  ROADMAP-v0.2.md
src/agent86/: __init__.py  __main__.py  cli.py  config.py  types.py
src/agent86/agents/: __init__.py  broker.py  envelope.py  orchestrator.py  subagent.py
src/agent86/cognitive/: __init__.py  anthropic_provider.py  base.py  llamacpp_provider.py  ollama_provider.py  openai_provider.py  pricing.py  prompt.py
src/agent86/gateway/: __init__.py
src/agent86/guardrails/: __init__.py  egress.py  ingress.py  policy.py  scanners.py
src/agent86/memory/: __init__.py  embeddings.py  episodic.py  semantic.py  store.py  system.py  working.py
src/agent86/observability/: __init__.py  recorder.py  tracing.py
src/agent86/orchestration/: __init__.py  circuit.py  loop.py  router.py  state.py
src/agent86/skills/: __init__.py  loader.py  models.py
src/agent86/tools/: __init__.py  base.py  mcp_client.py  registry.py
src/agent86/tools/builtin/: __init__.py  delegate.py  files.py  memory.py  python_exec.py  shell.py  skills_tool.py  web.py
src/agent86/tools/sandbox/: __init__.py  docker_exec.py  executor.py  policy.py  subprocess_exec.py
src/agent86/tui/: app.py  commands.py  messages.py  turn_bridge.py
src/agent86/tui/screens/: approval.py  mode_picker.py  model_picker.py
src/agent86/tui/widgets/: __init__.py  status_footer.py
src/agent86/ui/: __init__.py  repl.py  spinner.py  status.py
tests/: conftest.py  support.py
tests/integration/: live_mcp_server.py  test_agents.py  test_guardrail_loop.py  test_mcp_client.py  test_mcp_live.py  test_memory_loop.py  test_repl.py  test_repl_turns.py  test_threaded_memory.py  test_tool_loop.py
tests/tui/: conftest.py  test_app.py  test_commands.py  test_fallback.py  test_lazy_import.py  test_palette.py  test_palette_keys.py  test_pickers.py  test_status_footer.py  test_turn_bridge.py
tests/unit/: test_config.py  test_guardrails.py  test_loop.py  test_mcp.py  test_memory.py  test_observability.py  test_ollama_provider.py  test_openai_provider.py  test_router.py  test_sandbox_docker.py  test_skills.py  test_spinner.py  test_status.py  test_tools.py  test_types.py
