[project]
name = "agent86"
version = "0.4.1"
description = "An agentic harness on the command line — connects to remote or local models and lets them use tools and skills."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tony Fleming" }]
keywords = ["agent", "agentic", "harness", "llm", "cli", "mcp", "tools"]

# Core dependencies — kept light so `agent86` starts fast.
# Provider SDKs, embeddings, MCP, tracing, and Docker live behind extras.
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
local = ["sentence-transformers>=3.0", "sqlite-vec>=0.1.1"]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-sdk>=1.27", "opentelemetry-exporter-otlp>=1.27"]
docker = ["docker>=7.1"]
all = [
    "anthropic>=0.40",
    "openai>=1.40",
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.1",
    "mcp>=1.0",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "docker>=7.1",
]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
agent86 = "agent86.cli:app"

[project.urls]
Homepage = "https://github.com/tdfleming/agent86CLI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent86"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
packages = ["agent86"]
strict = false
warn_unused_ignores = true
