[project]
name = "agent86"
version = "0.5.5"
description = "An agentic harness on the command line — connects to remote or local models and lets them use tools and skills."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tony Fleming" }]
keywords = ["agent", "agentic", "harness", "llm", "cli", "mcp", "tools"]

# Core dependencies — kept light so `agent86` starts fast.
# Provider SDKs, embeddings, MCP, tracing, and Docker live behind extras.
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
local = ["sentence-transformers>=3.0", "sqlite-vec>=0.1.1"]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-sdk>=1.27", "opentelemetry-exporter-otlp>=1.27"]
docker = ["docker>=7.1"]
web = ["beautifulsoup4>=4.12"]  # clean article extraction for web_fetch (falls back to regex)
all = [
    "anthropic>=0.40",
    "openai>=1.40",
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.1",
    "mcp>=1.0",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "docker>=7.1",
    "beautifulsoup4>=4.12",
]
dev = [
    "pytest>=8.2", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.11",
    "sqlite-vec>=0.1.1",  # exercise the native vec_distance_cosine search path in CI
    "beautifulsoup4>=4.12",  # exercise the readability extraction path in CI
]

[project.scripts]
agent86 = "agent86.cli:app"

[project.urls]
Homepage = "https://github.com/tdfleming/agent86CLI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent86"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agent86"]
branch = true

[tool.coverage.report]
# Coverage is observable, not yet gated — no fail_under until the suite catches up. Skip
# lines that are defensive/unreachable or platform-specific.
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
]

[tool.mypy]
python_version = "3.11"
packages = ["agent86"]
strict = false
warn_unused_ignores = true

# Optional backends imported lazily behind extras; CI's [dev] install omits them, so mypy
# can't resolve them there. (openai ships py.typed and resolves when installed; the rest don't.)
[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "openai.*",
    "sentence_transformers.*",
    "sqlite_vec.*",
    "docker.*",
    "mcp.*",
    "opentelemetry.*",
]
ignore_missing_imports = true
